--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "cyonite/jade.php",
+    "name": "geedmo/jade.php",
     "description": "HAML-like template engine for PHP 5.3",
     "keywords": ["jade", "minification","template"],
-    "homepage": "https://github.com/cyonite/jade.php",
+    "homepage": "https://github.com/geedmo/jade.php",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Andreas Nurbo",
+            "name": "German Morales",
             "email": "",
-            "homepage": "http://cyonitesystems.com",
+            "homepage": "http://geedmo.com",
             "role": "Maintainer"
         }
     ],
