--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,11 @@
 {
     "name": "geedmo/jade.php",
-    "description": "HAML-like template engine for PHP 5.3",
-    "keywords": ["jade", "minification","template"],
-    "homepage": "https://github.com/geedmo/jade.php",
-    "type": "library",
+    "description": "PHP template system based on JADE template syntax.",
+	"keywords": ["jade", "php"],
     "license": "MIT",
     "authors": [
         {
             "name": "German Morales",
-            "email": "",
-            "homepage": "http://geedmo.com",
             "role": "Maintainer"
         }
     ],
@@ -21,10 +17,5 @@
     },
     "autoload": {
         "psr-0": { "Jade": "src/" }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "master"
-        }
     }
 }
